# ur5-moveit-example1

./: README.md
src/: control_server.py
ur5_control_moveit_config/: CMakeLists.txt  package.xml
ur5_control_moveit_config/config/: joint_names.yaml  ur5.srdf
ur5_control_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_execution.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  warehouse.launch
ur5_data_collect_fw/: CMakeLists.txt  package.xml
ur5_data_collect_fw/config/: item_spawn.xml
ur5_data_collect_fw/launch/: gripper3f.launch  start_gazebo.launch  test.launch
ur5_data_collect_fw/src/: control_random_pick.py  count_items.py  position_control.py  record.py  spawn_model.py
ur5_data_collect_fw/urdf/: ur5_robot.urdf.xacro
ur5_data_collect_fw/worlds/: empty_kinect.world
